# erc_tree_semantic_segmentation_in_mlops

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  cnn.md  cnn_en.md  demo.webm  glossary.md  overview.md  pyproject.toml  reference.ipynb  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
all_complexity/: entropy_data.xlsx
all_complexity/results/: results_image_001.jpg.txt  results_image_002.jpg.txt  results_image_003.jpg.txt  results_image_004.jpg.txt  results_image_005.jpg.txt  results_image_006.jpg.txt  results_image_007.jpg.txt  results_image_008.jpg.txt  results_image_009.jpg.txt  results_image_010.jpg.txt  results_image_011.jpg.txt  results_image_012.jpg.txt  results_image_013.jpg.txt  results_image_014.jpg.txt  results_image_015.jpg.txt  results_image_016.jpg.txt  results_image_017.jpg.txt  results_image_018.jpg.txt  results_image_019.jpg.txt  results_image_020.jpg.txt  results_image_021.jpg.txt  results_image_022.jpg.txt  results_image_023.jpg.txt  results_image_024.jpg.txt  results_image_025.jpg.txt  results_image_026.jpg.txt  results_image_027.jpg.txt  results_image_028.jpg.txt  results_image_029.jpg.txt  results_image_030.jpg.txt  (+190 more)
docs/: Makefile  conf.py  glossary.md  index.rst  installation.rst  make.bat  usage.rst
notebooks/: cpu_gpu_test.py  notebook_utils.py
prep/: convert_dng_jpg.txt  export_to_kml.py  extract_gps_metadata.py
seasonaldata/: seasonaldata.md
tests/: __init__.py  test_erc_tree_semantic_segmentation_in_mlops.py
utils/: constants.py  file_utils.py
workshop/: README.md
(+2077 files in other folders)
